app/subapps/khplayer/static/base.css
BODY {
	/* Default color scene, override in themes */

	--bg: white;
	--fg: black;

	--bg-header: #efefef;
	--bg-tabs: #b0b0b0;
	--bg-tab: #d0d0d0;
	--bg-tab-current: #efefef;

	--bg-progress-bar: #f8f8f8;
	--fg-progress-bar: green;

	--bg-buttons: #f0f0f0;
	--fg-buttons: black;
	--fg-buttons-disabled: grey;
	--bg-input-text: white;
	--fg-input-text: black;

	--bg-flash: #C00000;
	--fg-flash: white;

	--bg-popup: #f8f8f8;

	--bg-dnd: #f0f0ff;
	--border-dnd: blue 2px solid;

	--bg-scenes: #ffffffc0;
	--fg-scenes: black;
	--bg-scenes-preview: #ffff00c0;
	--fg-scenes-preview: black;
	--bg-scenes-program: #0080ffc0;
	--fg-scenes-program: white;

	display: flex;
	flex-direction: column;
	}

HTML, BODY, HEADER, MAIN, SECTION, H1, H2, P, PRE, UL, LI, INPUT, SELECT, TEXTAREA, BUTTON, IMG {
	margin: 0;
	padding: 0;
	}
* {
	box-sizing: border-box;
	}

HTML {
	font-family: sans-serif;
	font-size: 12pt;
	}
BODY {
	color: var(--fg);
	background-color: var(--bg);
}
HTML, BODY {
	height: 100%;
	}
HEADER {
	background-color: var(--bg-header);
	border-bottom: 1px solid #a0a0a0;
	}
MAIN {
	flex-grow: 1;
	overflow: auto;
	}
SECTION {
	margin: 0.3rem;
	}
H1, H2 {
	font-family: sans-serif;
	}
H1 {
	font-size: 120%;
	}
H2 {
	font-size: 100%;
	}
P {
	margin-bottom: .5em;
	}
UL {
	margin: 0 0 0 1.2em;
	}
LI {
	margin: .2em 0;
	}

INPUT, SELECT, TEXTAREA, BUTTON {
	font-size: inherit;								/* For some reason Pywebview makes these large */
	}
INPUT[type=checkbox] {
	width: 1.2em;
	height: 1.2em;
	}
INPUT[type=text], TEXTAREA {
	background-color: var(--bg-input-text);
	color: var(--fg-input-text);
	}
.borderless-box INPUT[type=checkbox] {				/* FIXME: Hack for bad alignment in Scenes tab toolbar */
	vertical-align: bottom;
	margin-bottom: .78em;
	}
LABEL {
	font-weight: bold;
	}
INPUT, TEXTAREA {
	padding: .1em .2em;
	}
BUTTON, SELECT, OPTION, INPUT[type='text'] {
	padding: .5em;
	border-width: 1px;
	border-style: outset;
	border-color: #808080;
	border-radius: 3px;
	}
SELECT, BUTTON {
	background-color: var(--bg-buttons);
	color: var(--fg-buttons);
	white-space: nowrap;
	border-width: 1px;
	border-style: outset;
	border-color: #808080;
	}
SELECT:hover, BUTTON:hover {
	filter: brightness(110%);
	}
BUTTON:active {
	filter: brightness(50%);
	}
BUTTON:disabled {
	color: var(--fg-buttons-disabled);
	filter: none;
	}

/* Button icons */
BUTTON[class] {
	position: relative;
	padding-left: 1.5em;
	}
BUTTON[class]::before {
	position: absolute; top: 0; left: 0;
	width: 100%; height: 100%;
	background-repeat: no-repeat;
	background-size: 1em 1em;
	background-position: .25em center;
	content: "";
	}
BUTTON.back::before {
	background-image: url(icon-back.svg);
	}
BUTTON.browse::before {
	background-image: url(icon-browse.svg);
	}
BUTTON.cancel::before {
	background-image: url(icon-cancel.svg);
	}
BUTTON.config::before {
	background-image: url(icon-config.svg);
	}
BUTTON.connect::before {
	background-image: url(icon-connect.svg);
	}
BUTTON.delete::before {
	background-image: url(icon-cancel.svg);
	}
BUTTON.down::before {
	background-image: url(icon-down.svg);
	}
BUTTON.download::before {
	background-image: url(icon-download.svg);
	}
BUTTON.face::before {
	background-image: url(icon-face.svg);
	}
BUTTON.new::before {
	background-image: url(icon-new.svg);
	}
BUTTON.reload::before {
	background-image: url(icon-reload.svg);
	}
BUTTON.reset::before {
	background-image: url(icon-reset.svg);
	}
BUTTON.save::before {
	background-image: url(icon-save.svg);
	}
BUTTON.search::before {
	background-image: url(icon-search.svg);
	}
BUTTON.up::before {
	background-image: url(icon-up.svg);
	}
BUTTON.upload::before {
	background-image: url(icon-upload.svg);
	}
BUTTON.web::before {
	background-image: url(icon-web.svg);
	}

/* Fancy file upload */
.file-upload {
	display: flex;
	flex-grow: 1;
	}
.file-upload INPUT[type='file'] {
	display: none;
	}

/* Header at top of each tabbed page */
HEADER > NAV > UL {
	display: flex;
	list-style-type: none;
	margin: 0;
	background-color: var(--bg-tabs);
	padding-top: 1px;
	}
HEADER > NAV > UL > LI {
	margin: 0 5px;
	border-radius: 5px 5px 0 0;
	white-space: nowrap;
	background-color: var(--bg-tab);
	}
HEADER > NAV > UL > LI:hover {
	}
HEADER > NAV > UL > LI.current {
	position: relative;
	top: 1px;
	background-color: var(--bg-tab-current);
	}
HEADER > NAV > UL > LI > A {
	padding: .5em;
	display: block;
	text-decoration: none;
	color: inherit;
	}
HEADER > H1 {
	padding: .3em;
	}
HEADER H1 A {
	color: inherit;
	text-decoration: inherit;
	}
HEADER {
	position: relative;
	}
HEADER DIV#progress {
	position: absolute;
	top: 2.5em;
	right: .5em;
	width: 75%;
	max-width: 60em;
	background-color: var(--bg-header);
	z-index: 100;
	border: 1px solid #808080;
	visibility: hidden;
	}
HEADER DIV#progress:has(#progress-message > DIV) {
	visibility: visible;
	}
HEADER DIV#progress > * {
	margin: .3em;
	border: 1px solid #c0c0c0;
	}
HEADER DIV#progress-bar {
	background-color: var(--bg-progress-bar);
	height: 1.4em;
	}
HEADER DIV#progress-bar > DIV {
	height: 100%;
	background-color: green;
	background-color: var(--fg-progress-bar);
	}
HEADER DIV#progress-message {
	min-height: 1.4em;
	padding: .1em .2em 0 .2em;
	}
HEADER DIV#progress-message DIV {
	text-indent: -1em;
	padding-left: 1em;
	}
HEADER DIV#progress-message DIV.heading {
	font-weight: bold;
	}
HEADER DIV#progress-message DIV.success {
	color: green;
	}
HEADER DIV#progress-message DIV.error {
	color: red;
	}
HEADER FORM.header-reload {
	float: right;
	margin: .2em;
	}

/* Error messages above content */
DIV.flash {
	background-color: var(--bg-flash);
	color: var(--fg-flash);
	border-radius: 5px;
	margin: .3rem .3rem 0 .3rem;
	padding: .5em;
	font-family: sans-serif;
	}

/* An actual content table with borders and shaded header elements */
TABLE.borders {
	border-collapse: collapse;
	margin-bottom: .3em;
	}
TABLE.borders TH, TABLE.borders TD {
	border: thin solid #808080;
	text-align: left;
	padding: .3em;
	}
/* ... */

